# neev-sdk-python

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  ruff.toml
.changeset/: README.md  agent-lifecycle.md  sandbox-files-control-and-watch.md  sandbox-preview-ports.md  sandbox-process-supervisor.md  sandbox-pty.md
.github/: CHANGELOG.md  CONTRIBUTING.md  SECURITY.md
.github/workflows/: python-ci.yml  release.yml
docs/: api-inventory.md  api-reference.md  architecture.md  development.md  example-coverage.md  getting-started.md  process-api-review-analysis.md  release.md
docs/test-reports/: test-report.md  test-report.txt  test-report.xml
examples/: README.md  async_basic.py  async_sandbox.py  create_agent.py  files_api.py  parallel_fanout.py  preview_ports.py  process_pool.py  processes.py  pty.py  raw_request.py  sandbox_lifecycle.py  sandbox_lifecycle_controller.py  sandbox_metrics.py  sandbox_workflow.py  snapshot_fork_restore.py  ssh_tunnel.py  streaming_exec.py  sync_basic.py  templates_list.py
examples/agent_patterns/: README.md  langchain_agent.py  minimal_agent.py
examples/agent_patterns/utils/: agent_loop.py  model_config.py  sandbox_tool.py
examples/agents/: README.md  ai_interpreter.py  langchain_agent.py
examples/agents/utils/: agent_loop.py  model_config.py
examples/use_cases/: README.md  browser_agent.py  data_analysis.py  repo_analyzer.py
examples/use_cases/fixtures/: sales.csv
examples/workflow_examples/: README.md  browser_agent.py  repo_analyzer.py
scripts/: gen_types.py  setup_dev.py
specs/: aiagent.yaml
src/neevai/: __init__.py  _egress.py  _parse.py  client.py  errors.py  sandbox.py  sandboxd.py  types.py
src/neevai/dataplane/: __init__.py  sandboxd.py
src/neevai/handles/: __init__.py  agent.py  sandbox.py
src/neevai/resources/: __init__.py  agent_templates.py  agents.py  sandboxes.py  templates.py
src/neevai/runtime/: __init__.py  _stream.py  connection.py  processes.py  pty.py  sandboxd.py  schemas.py  ssh.py
src/neevai/transport/: __init__.py  control.py  dataplane.py  lifecycle.py  retry.py  (+1 more)
tests/: conftest.py  test_agent.py  test_agent_templates.py  test_agents.py  test_client.py  test_connection.py  test_egress.py  test_errors.py  test_ports.py  test_processes.py  test_pty.py  test_sandbox.py  test_sandboxd.py  test_sandboxes.py  test_ssh.py  test_templates.py  test_transport.py
