[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neevai"
version = "0.6.0b0"
description = "Official NeevCloud SDK for the Neev platform — Python. First up: agent sandboxes."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]

authors = [
    { name = "NeevCloud" }
]

keywords = [
    "neev",
    "neevcloud",
    "sdk",
    "agent",
    "sandbox",
    "ai",
    "gpu",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.24.0",
    "typing-extensions>=4.13.2",
    "pydantic>=2.10",
]

[project.urls]
Homepage = "https://github.com/NeevCloudAI/neev-sdk-python"
Repository = "https://github.com/NeevCloudAI/neev-sdk-python"
Issues = "https://github.com/NeevCloudAI/neev-sdk-python/issues"
Documentation = "https://github.com/NeevCloudAI/neev-sdk-python#readme"

[project.optional-dependencies]
agents = [
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.2",
]

dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-mock>=3.6.0",
    "ruff>=0.5.0",
    "datamodel-code-generator>=0.25.0",
    "pyright>=1.1",
    "mypy>=1.10",
]

[tool.hatch.build.targets.sdist]
only-include = [
    "src/neevai",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/neevai"]

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
include = ["src/neevai"]
extraPaths = ["examples/agent_patterns"]
exclude = ["src/neevai/generated"]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportPrivateUsage = false
reportUnknownMemberType = false

[tool.mypy]
python_version = "3.10"
packages = ["neevai"]
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "neevai.generated.*"
ignore_errors = true
